# modular_navigation

./: .gitignore  .gitlab-ci.yml  .rosinstall  AUTHORS  LICENSE  README.md
astar_planner/: CMakeLists.txt  out.txt  package.xml  plugin.xml
astar_planner/include/astar_planner/: astar.h  costmap.h  node.h  orientation_filter.h  plugin.h  simple_svg.h  visualisation.h
astar_planner/src/: astar.cpp  costmap.cpp  node.cpp  orientation_filter.cpp  plugin.cpp  visualisation.cpp
astar_planner/test/: unit_test.cpp
autonomy/: CMakeLists.txt  package.xml  setup.py
autonomy/action/: Drive.action
autonomy/config/: navigation.yaml
autonomy/include/autonomy/: autonomy.h  math.h
autonomy/launch/: autonomy.launch  autonomy_launch.py
autonomy/scripts/: fake_localisation.py
autonomy/src/: autonomy.cpp  main.cpp
autonomy/test/: goal.py  integration_test.test  navigation.yaml  odom_test.py  robot.urdf.xacro  test.world  test_drive_to_waypoint.py
autonomy/test/config/: navigation.yaml
autonomy/test/resources/: sim_map.world  test_robot.sdf  test_robot.urdf
clear_costmap_recovery/: CMakeLists.txt  package.xml  plugin.xml
clear_costmap_recovery/include/clear_costmap_recovery/: clear_costmap_recovery.h
clear_costmap_recovery/src/: clear_costmap_recovery.cpp
costmap_2d/: CMakeLists.txt  costmap_plugins.xml  package.xml  plugins.xml
costmap_2d/cfg/: DilationInflationPlugin.cfg
costmap_2d/include/costmap_2d/: array_parser.h  cost_values.h  costmap_2d.h  costmap_2d_publisher.h  costmap_2d_ros.h  costmap_layer.h  costmap_math.h  data_source.h  footprint.h  inflation_layer.h  layer.h  layered_costmap.h  map_data.h  map_publisher.h  observation.h  observation_buffer.h  obstacle_layer.h  params.h  raytrace.h  static_layer.h  testing_helper.h  voxel_layer.h
costmap_2d/plugins/: inflation_layer.cpp  obstacle_layer.cpp  static_layer.cpp  voxel_layer.cpp
costmap_2d/src/: array_parser.cpp  costmap_2d.cpp  costmap_2d_cloud.cpp  costmap_2d_markers.cpp  costmap_2d_node.cpp  costmap_2d_publisher.cpp  costmap_2d_ros.cpp  costmap_layer.cpp  costmap_math.cpp  footprint.cpp  layer.cpp  layered_costmap.cpp  main.cpp  map_data.cpp  map_publisher.cpp  observation_buffer.cpp
costmap_2d/src/nodes/: costmap_2d_cloud.cpp
costmap_2d/src/plugins/: base_map_data.cpp  dilation_inflation_layer.cpp  inflation_layer.cpp  laser_data.cpp  obstacle_layer.cpp  point_cloud_data.cpp  static_layer.cpp  voxel_layer.cpp
costmap_2d/test/: array_parser_test.cpp  costmap_tester.cpp  footprint_tests.cpp  inflation_tests.cpp  integration_test.test  module_tests.cpp  obstacle_tests.cpp  static_tests.cpp  test.world
costmap_2d/test/cartographer/: cartographer.lua
costmap_2d/test/test_data/: map.yaml
costmap_2d/test/unit_tests/: array_parser_test.cpp
eband_local_planner/: CMakeLists.txt  elp_plugin.xml  package.xml
eband_local_planner/include/eband_local_planner/: astar.h  conversions_and_types.h  costmap_model.h  eband_local_planner.h  eband_local_planner_ros.h  eband_trajectory_controller.h  eband_visualization.h  goal_functions.h  line_iterator.h  pid.h  planar_laser_scan.h  (+1 more)
eband_local_planner/src/: astar.cpp  conversions_and_types.cpp  costmap_model.cpp  eband_local_planner.cpp  eband_local_planner_ros.cpp  eband_local_planner_ros.cpp.autosave  eband_trajectory_controller.cpp  eband_visualization.cpp  goal_functions.cpp  pid.cpp
global_planner/: CMakeLists.txt  package.xml
global_planner/src/: astar.cpp  dijkstra.cpp  gradient_path.cpp  grid_path.cpp  orientation_filter.cpp  plan_node.cpp  planner_core.cpp  quadratic_calculator.cpp
graph_map/: CMakeLists.txt  package.xml  setup.py
graph_map/graph_map/: __init__.py  area.py  node_graph_manager.py
graph_map/msg/: Region.msg  Zone.msg
graph_planner/: CMakeLists.txt  package.xml
graph_planner/scripts/: graph_planner_node.py
graph_planner/srv/: GraphPlan.srv  LoadFloorplan.srv
gridmap/: CMakeLists.txt  package.xml  plugins.xml
gridmap/src/: layered_map.cpp  main.cpp  map_data.cpp  map_publisher.cpp  robot_tracker.cpp
gridmap/test/: bld1_south_prep_booth.world  integration_test.test  landmarks.py  robot.urdf.xacro  test.world  test_raytrace.cpp  unit_test.cpp
hd_map/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  package.xml
hd_map/msg/: Map.msg  MapInfo.msg  Marker.msg  Markers.msg  Node.msg  Path.msg  Zone.msg  Zones.msg
map_io/: CMakeLists.txt  package.xml
map_io/src/: image_loader.cpp  publish_map.cpp  save_map.cpp
map_manager/: .gitlab-ci.yml  CMakeLists.txt  README.md  package.xml  setup.py
map_manager/dxf/: DirectedEdge.dxf  Edge.dxf  Node.dxf  dxf_specification.md  sample.dxf
map_manager/launch/: test_manager.launch  test_manager.py
map_manager/log/: latest_build
map_manager/map_manager/: __init__.py  documents.py  map_info.py  map_manager_node.py  ros_wrapper.py  tess.py  test_utils.py  visualise.py
map_manager/msg/: Map.msg  Markers.msg  Zones.msg
map_manager/scripts/: decode.py  download_pbstream.py  map_manager_node.py  process_dxf.py  save_cartographer_map.py  save_gmapping_map.py  save_map.py  template_world.py  upload_map.py  upload_map_ros.py
map_manager/srv/: AddMap.srv  AddMarker.srv  AddZone.srv  DeleteMap.srv  DeleteZone.srv  GetActiveMap.srv  GetAreaTree.srv  GetMap.srv  GetMapInfo.srv  GetMarker.srv  GetNodeGraph.srv  GetOccupancyGrid.srv  GetZone.srv  GetZones.srv  ListMaps.srv  ListMarkers.srv  ListZones.srv  SetActiveMap.srv  UpdateMap.srv  UpdateMarker.srv  UpdateZone.srv
map_manager/test/: test_manager.py  test_manager.test
map_manager/worlds/: world.template
map_manager_msgs/: CMakeLists.txt  package.xml
map_manager_msgs/msg/: MapInfo.msg
map_manager_msgs/srv/: GetMapInfo.srv
modular_move_base/: CMakeLists.txt  package.xml
modular_move_base/cfg/: MoveBase.cfg
modular_move_base/src/: main.cpp  move_base.cpp
modular_move_base/srv/: Plan.srv
modular_move_base/test/: goal.py  integration_test.py  integration_test.test  move_base.yaml  odom_test.py  robot.urdf.xacro
modular_navigation/: CMakeLists.txt  package.xml
nav_core/: CMakeLists.txt  package.xml
(+215 files in other folders)
