<?xml version="1.0"?>
<package format="2">
    <name>astar_planner</name>
    <version>0.1.0</version>
    <description>astar_planner</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>gridmap</depend>
    <depend>cv_bridge</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>libopencv-dev</depend>
    <depend>nav_msgs</depend>
    <depend>navigation_interface</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>
    <depend>hd_map</depend>

    <test_depend>rosunit</test_depend>

    <export>
        <navigation_interface plugin="${prefix}/plugin.xml"/>
    </export>
</package>
