<?xml version="1.0"?>
<package format="2">
    <name>astar_planner</name>
    <version>0.1.0</version>
    <description>astar_planner</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>cv_bridge</depend>
    <depend>eigen</depend>
    <depend>geometry_msgs</depend>
    <depend>gridmap</depend>
    <depend>libopencv-dev</depend>
    <depend>nav_msgs</depend>
    <depend>navigation_interface</depend>
    <depend>pluginlib</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    <!--if not included, throws target not found when adding other libraries-->
    <build_depend>graph_map</build_depend>
    <build_depend>cartographer_ros_msgs</build_depend>
    <build_depend>map_manager</build_depend>


    <!--<test_depend>rosunit</test_depend>-->

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>