<?xml version="1.0"?>
<package format="3">
    <name>autonomy</name>
    <version>0.1.0</version>
    <description>Mobile Robot Navigation</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <!--<buildtool_depend>ament_cmake_python</buildtool_depend>-->

    <!--<depend>actionlib</depend> apparently not necessary in ros2?-->
    <depend>cmake_modules</depend>
    <depend>geometry_msgs</depend>
    <depend>gridmap</depend>
    <depend>map_manager</depend>
    <!--<depend>message_generation</depend>-->
    <depend>autonomy_interface</depend>
    <depend>nav_msgs</depend>
    <depend>navigation_interface</depend>
    <depend>pluginlib</depend>
    <depend>std_srvs</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>
    <depend>yaml-cpp</depend>
    <depend>cartographer_ros_msgs</depend>

    <depend>actionlib_msgs</depend>
    <!--<depend>action_msgs</depend>-->
    <buildtool_depend>rosidl_default_generators</buildtool_depend>
    <exec_depend>message_runtime</exec_depend>

    <!--<build_depend>rosidl_default_generators</build_depend>-->
    <exec_depend>rosidl_default_runtime</exec_depend>
    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>

</package>