<?xml version="1.0"?>
<package format="2">
    <name>clear_costmap_recovery</name>
    <version>1.16.2</version>
    <description>Fork of clear_costmap_recovery</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>

    <depend>costmap_2d</depend>
    <depend>eigen</depend>
    <depend>nav_core</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>

    <export>
      <nav_core plugin="${prefix}/plugin.xml"/>
    </export>
</package>