<?xml version="1.0"?>
<package format="2">
    <name>costmap_2d</name>
    <version>1.16.2</version>
    <description>Fork of costmap_2d</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>cmake_modules</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>tf2_sensor_msgs</build_depend>

    <depend>cv_bridge</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>geometry_msgs</depend>
    <depend>laser_geometry</depend>
    <depend>map_msgs</depend>
    <depend>message_filters</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>sensor_msgs</depend>
    <depend>std_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>visualization_msgs</depend>
    <depend>voxel_grid</depend>
    <depend>tf2_geometry_msgs</depend>

    <exec_depend>message_runtime</exec_depend>
    <exec_depend>rosconsole</exec_depend>

    <test_depend>map_server</test_depend>
    <test_depend>rosbag</test_depend>
    <test_depend>rostest</test_depend>
    <test_depend>rosunit</test_depend>

    <export>
      <costmap_2d plugin="${prefix}/costmap_plugins.xml"/>
    </export>
</package>
