<?xml version="1.0"?>
<package format="2">
    <name>eband_local_planner</name>
    <version>0.3.1</version>
    <description>Fork of eband_local_planner</description>
    <maintainer email="Phillip.Haeusler@boeing.com">Phillip Haeusler</maintainer>
    <author>Boeing</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>costmap_2d</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_core</depend>
    <depend>nav_msgs</depend>
    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>tf2_ros</depend>

    <export>
        <nav_core plugin="${prefix}/elp_plugin.xml"/>
    </export>

</package>
