<?xml version="1.0"?>
<package format="3">
    <name>graph_map</name>
    <description>graph_map</description>
    <version>0.1.0</version>
    <maintainer email="william.ko@boeing.com">William Ko</maintainer>
    <author>William Ko</author>
    <author>Leng Vongchahn</author>
    <license>Boeing Proprietary</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>ament_cmake_python</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>nav_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>std_msgs</depend>
    <!--<depend>message_generation</depend>--> 

    <exec_depend>rosidl_default_runtime</exec_depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>python3-shapely</exec_depend>
    <exec_depend>python3-matplotlib</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
